fix: fixed various problems with caddy
